# galaxy-zoo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: predict.yaml  prediction_config.yaml  train.yaml  train_classification.yaml  train_config.yaml  train_imagenet.yaml  train_regression.yaml
example/: all_ones_benchmark.csv
gzoo/app/: eda_clf.py  make_clf_labels.py  make_labels.py  predict.py  split_data.py  train.py  update_config.py  upload_clf.py
gzoo/domain/: model.py  models.py  pipeline.py
gzoo/infra/: config.py  data.py  logging.py  options.py  utils.py
