[tool.poetry]
name = "galaxy-zoo"
version = "0.1.0"
description = "This project aims to classify the morphologies of distant galaxies using deep neural networks."
authors = ["Simon Alibert <alibert.sim@gmail.com>"]
repository = "https://github.com/aliberts/galaxy-zoo"
readme = "README.md"
packages = [{include = "gzoo"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
torch = "^1.13.0"
torchvision = "^0.14.0"
wandb = "^0.13.6"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
kaggle = "^1.5.12"
pyrallis = "^0.3.1"
fastai = "^2.7.10"
termgraph = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
